[gd_scene load_steps=15 format=3 uid="uid://chtf1tf3vjph3"]

[ext_resource type="Script" path="res://script/idea.gd" id="1_sdgp6"]
[ext_resource type="Texture2D" uid="uid://bgtvn1w0n4pa3" path="res://assets/item/idea.png" id="1_t80eu"]
[ext_resource type="PackedScene" uid="uid://up4ihseinsod" path="res://scene/item/item_generator.tscn" id="3_vvsbk"]
[ext_resource type="Texture2D" uid="uid://bb0gra7lqdmer" path="res://assets/environment/Smoke/FX001/FX001_01.png" id="4_6hv86"]
[ext_resource type="Texture2D" uid="uid://vf0wdyyiv8x" path="res://assets/environment/Smoke/FX001/FX001_02.png" id="5_8dmt7"]
[ext_resource type="Texture2D" uid="uid://cqxtgk7wruqvs" path="res://assets/environment/Smoke/FX001/FX001_03.png" id="6_7a02w"]
[ext_resource type="Texture2D" uid="uid://gg7dnap5ctqf" path="res://assets/environment/Smoke/FX001/FX001_04.png" id="7_0mkn5"]
[ext_resource type="Texture2D" uid="uid://ojdhwpldoh03" path="res://assets/environment/Smoke/FX001/FX001_05.png" id="8_67k0n"]
[ext_resource type="Script" path="res://scene/item/ideapoof.gd" id="9_68nt4"]
[ext_resource type="AudioStream" uid="uid://c6ynro0b4t14d" path="res://assets/sounds/new_idea.mp3" id="10_4g1uv"]
[ext_resource type="AudioStream" uid="uid://4wqv0fnnm0cv" path="res://assets/sounds/poof-80161.mp3" id="11_omc7y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2grmr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m7mwp"]
atlas = ExtResource("4_6hv86")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_v0qni"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6hv86")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7mwp")
}, {
"duration": 1.0,
"texture": ExtResource("5_8dmt7")
}, {
"duration": 1.0,
"texture": ExtResource("6_7a02w")
}, {
"duration": 1.0,
"texture": ExtResource("7_0mkn5")
}, {
"duration": 1.0,
"texture": ExtResource("8_67k0n")
}],
"loop": false,
"name": &"poof",
"speed": 10.0
}]

[node name="Idea" type="Area2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource("1_sdgp6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(2.92, 2.56)
shape = SubResource("CircleShape2D_2grmr")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.866667)
texture = ExtResource("1_t80eu")

[node name="item_generator" parent="." instance=ExtResource("3_vvsbk")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -5)
scale = Vector2(1.64239, 2.13263)
sprite_frames = SubResource("SpriteFrames_v0qni")
animation = &"poof"
script = ExtResource("9_68nt4")

[node name="ping" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_4g1uv")
volume_db = 1.0
max_polyphony = 5
bus = &"SFX"

[node name="poof" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_omc7y")
volume_db = 1.0
max_polyphony = 5
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="finished" from="ping" to="." method="_on_ping_finished"]
